Challenge 1: File Setup done

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,13 @@
+<!DOCTYPE html>
+<head>
+  <title>Tic Tac Toe App - Heni Mezrani</title>
+  <link rel="stylesheet" type="text/css" href="./style.css"/>
+</head>
+<body>
 
+
+
+
+  <script src= ./app.js></script>
+</body>
 
