Game and Player classes and constructors created

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -4,9 +4,23 @@
   <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 <body>
-
-
-
+  <div class="playboard">
+    <div class="row" id="r0">
+      <div class="col" id="r0c0"></div>
+      <div class="col" id="r0c1"></div>
+      <div class="col" id="r0c2"></div>
+    </div>
+    <div class="row" id="r1">
+      <div class="col" id="r1c0"></div>
+      <div class="col" id="r1c1"></div>
+      <div class="col" id="r1c2"></div>
+    </div>
+    <div class="row" id="r2">
+      <div class="col" id="r2c0"></div>
+      <div class="col" id="r2c1"></div>
+      <div class="col" id="r2c2"></div>
+    </div>
+  </div>
 
   <script src= ./app.js></script>
 </body>
