--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,13 @@
+<!DOCTYPE html>
+<head>
+    <title>Checkout App</title>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
-
+</head>
+<body>
+    <div id="App">
+    </div>
+    <script src="app.js"></script>
+</body>
